# drskill

./: .gitignore  README.md  initial_design_doc.md  pyproject.toml
docs/superpowers/plans/: 2026-07-19-drskill-v0.1.md  2026-07-20-detailed-scan-linked-provenance.md  2026-07-20-tier2-heuristics.md  2026-07-20-tier3-injection.md  2026-07-20-triage-ux.md  2026-07-21-deep-foundation.md  2026-07-21-description-rewrite.md  2026-07-21-mcp-handshake.md  2026-07-21-mcp-static.md  2026-07-21-skill-suites.md  2026-07-23-audit.md  2026-07-23-mcp-tool-poisoning.md
docs/superpowers/specs/: 2026-07-19-drskill-v0.1-design.md  2026-07-20-detailed-scan-and-linked-provenance-design.md  2026-07-20-granular-verification-design.md  2026-07-20-report-triage-design.md  2026-07-20-review-command-design.md  2026-07-20-tier2-heuristics-design.md  2026-07-20-tier3-injection-design.md  2026-07-21-deep-foundation-design.md  2026-07-21-description-rewrite-design.md  2026-07-21-mcp-static-design.md  (+5 more)
packaging/drskill/: pyproject.toml
scripts/: corpus.py
src/drskill/: cli.py  deep.py  deep_llm.py  discovery.py  harnesses.py  interactive.py  ledger.py  mcp.py  mcp_connect.py  models.py  pipeline.py  report.py  resolution.py  state.py  suites.py  text.py  tokens.py
tests/: test_checks_budget.py  test_checks_duplicates.py  test_checks_filesystem.py  test_checks_heuristics.py  test_checks_injection.py  test_checks_lockfile.py  test_checks_mcp.py  test_checks_mcp_injection.py  test_checks_shadowing.py  test_checks_spec.py  test_cli_audit.py  test_cli_commands.py  test_cli_review.py  test_cli_scan.py  test_deep.py  test_deep_cli.py  test_discovery.py  test_harnesses.py  test_interactive.py  test_ledger.py  test_mcp.py  test_mcp_connect.py  test_mcp_tools.py  test_models.py  test_report.py  test_resolution.py  test_smoke.py  test_state.py  test_suites.py  test_text.py  test_tokens.py  test_traces_cache.py  test_traces_claude_code.py  test_traces_codex.py  test_traces_common.py  test_traces_copilot.py  test_traces_pi.py  test_traces_pipeline.py  test_traces_report.py
tests/conformance/: test_conformance.py
tests/fixtures/: fake_mcp_server.py
(+70 files in other folders)
