[project]
name = "drskill"
version = "0.2.0"
description = "brew doctor for your AI agent's skill loadout"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
    "tomli-w>=1",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
deep = ["dspy>=2.6"]

[project.scripts]
drskill = "drskill.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drskill"]

[tool.uv]
dev-dependencies = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
