# The `drskill` package everyone installs. It is a metapackage: no code,
# just drskill-core plus the deep extra, so the default install includes
# everything and CI can opt down to drskill-core. Its version must always
# equal drskill-core's; /release bumps and publishes both, core first.

[project]
name = "drskill"
version = "0.2.0"
description = "brew doctor for your AI agent's skill loadout"
requires-python = ">=3.11"
dependencies = ["drskill-core[deep]==0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
